---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `str`"
    suggestion: "Remove duplicate union member `str`"
    fixable: true
  location:
    row: 5
    column: 14
  end_location:
    row: 5
    column: 17
  fix:
    edits:
      - content: str
        location:
          row: 5
          column: 8
        end_location:
          row: 5
          column: 17
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `int`"
    suggestion: "Remove duplicate union member `int`"
    fixable: true
  location:
    row: 8
    column: 22
  end_location:
    row: 8
    column: 25
  fix:
    edits:
      - content: int
        location:
          row: 8
          column: 16
        end_location:
          row: 8
          column: 25
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `str`"
    suggestion: "Remove duplicate union member `str`"
    fixable: true
  location:
    row: 12
    column: 21
  end_location:
    row: 12
    column: 24
  fix:
    edits:
      - content: str
        location:
          row: 12
          column: 15
        end_location:
          row: 12
          column: 24
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `str`"
    suggestion: "Remove duplicate union member `str`"
    fixable: true
  location:
    row: 16
    column: 14
  end_location:
    row: 16
    column: 17
  fix:
    edits:
      - content: str
        location:
          row: 16
          column: 8
        end_location:
          row: 16
          column: 17
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `int`"
    suggestion: "Remove duplicate union member `int`"
    fixable: true
  location:
    row: 17
    column: 14
  end_location:
    row: 17
    column: 17
  fix:
    edits:
      - content: int
        location:
          row: 17
          column: 8
        end_location:
          row: 17
          column: 17
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `str`"
    suggestion: "Remove duplicate union member `str`"
    fixable: true
  location:
    row: 18
    column: 20
  end_location:
    row: 18
    column: 23
  fix:
    edits:
      - content: str | int
        location:
          row: 18
          column: 8
        end_location:
          row: 18
          column: 23
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `int`"
    suggestion: "Remove duplicate union member `int`"
    fixable: true
  location:
    row: 19
    column: 27
  end_location:
    row: 19
    column: 30
  fix:
    edits:
      - content: int | bool | str
        location:
          row: 19
          column: 8
        end_location:
          row: 19
          column: 30
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `int`"
    suggestion: "Remove duplicate union member `int`"
    fixable: true
  location:
    row: 25
    column: 21
  end_location:
    row: 25
    column: 24
  fix:
    edits:
      - content: str
        location:
          row: 25
          column: 15
        end_location:
          row: 25
          column: 24
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `int`"
    suggestion: "Remove duplicate union member `int`"
    fixable: true
  location:
    row: 28
    column: 15
  end_location:
    row: 28
    column: 18
  fix:
    edits:
      - content: str
        location:
          row: 28
          column: 15
        end_location:
          row: 28
          column: 24
  parent: ~
- kind:
    name: DuplicateUnionMember
    body: "Duplicate union member `str`"
    suggestion: "Remove duplicate union member `str`"
    fixable: true
  location:
    row: 29
    column: 23
  end_location:
    row: 29
    column: 26
  fix:
    edits:
      - content: str | int
        location:
          row: 29
          column: 9
        end_location:
          row: 29
          column: 26
  parent: ~

